@@ -1,7 +1,29 @@
-// ResolveVisitor.cs created with MonoDevelop
-// User: mkrueger at 15:56 24.06.2008
 //
-// To change standard headers go to Edit->Preferences->Coding->Standard Headers
+// ResolveVisitor.cs
+//
+// Author:
+//   Mike Krüger <mkrueger@novell.com>
+//
+// Copyright (C) 2008 Novell, Inc (http://www.novell.com)
+//
+// Permission is hereby granted, free of charge, to any person obtaining
+// a copy of this software and associated documentation files (the
+// "Software"), to deal in the Software without restriction, including
+// without limitation the rights to use, copy, modify, merge, publish,
+// distribute, sublicense, and/or sell copies of the Software, and to
+// permit persons to whom the Software is furnished to do so, subject to
+// the following conditions:
+// 
+// The above copyright notice and this permission notice shall be
+// included in all copies or substantial portions of the Software.
+// 
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+// LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+// OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+// WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
 
 using System;
@@ -44,7 +66,7 @@ namespace MonoDevelop.CSharpBinding
 		
 		ResolveResult CreateResult (string fullTypeName)
 		{
-			ResolveResult result = new ResolveResult ();
+			MemberResolveResult result = new MemberResolveResult ();
 			result.CallingType   = resolver.CallingType;
 			result.CallingMember = resolver.CallingMember;
 			if (!String.IsNullOrEmpty (fullTypeName))
@@ -54,7 +76,7 @@ namespace MonoDevelop.CSharpBinding
 		
 		ResolveResult CreateResult (IReturnType type)
 		{
-			ResolveResult result = new ResolveResult ();
+			MemberResolveResult result = new MemberResolveResult ();
 			result.CallingType   = resolver.CallingType;
 			result.CallingMember = resolver.CallingMember;
 			result.ResolvedType  = type;
@@ -162,6 +184,27 @@ namespace MonoDevelop.CSharpBinding
 			return result;
 		}
 		
+		public override object VisitBaseReferenceExpression(BaseReferenceExpression baseReferenceExpression, object data)
+		{
+			if (resolver.CallingType == null || resolver.CallingType.FullName == "System.Object")
+				return CreateResult (DomReturnType.Void);
+			
+			ResolveResult result = resolver.CallingType.BaseType != null ? CreateResult (resolver.CallingType.BaseType) : CreateResult ("System.Object");
+		//	result.ResolvedMember = resolver.CallingType;
+			return result;
+		}
+		
+		public override object VisitTypeReferenceExpression(TypeReferenceExpression typeReferenceExpression, object data)
+		{
+			return CreateResult (typeReferenceExpression.TypeReference);
+		}
+		/*
+		public override object VisitInvocationExpression(InvocationExpression invocationExpression, object data)
+		{
+			
+		}*/
+		
+
 		
 		IReturnType GetCommonType (IReturnType left, IReturnType right)
 		{
