@@ -1,3 +1,8 @@
+2008-07-07  Mike Krüger <mkrueger@novell.com> 
+
+	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs,
+	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.
+
 2008-07-04  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs: Worked
